syntax = "proto3";

package crescent.lpfarm.v1beta1;

import "gogoproto/gogo.proto";
import "crescent/lpfarm/v1beta1/lpfarm.proto";
import "google/protobuf/timestamp.proto";

option go_package                      = "github.com/crescent-network/crescent/v4/x/lpfarm/types";
option (gogoproto.goproto_getters_all) = false;

message FarmingPlanProposal {
  option (gogoproto.goproto_stringer)                   = false;
  string                        title                   = 1;
  string                        description             = 2;
  repeated CreatePlanRequest    create_plan_requests    = 3 [(gogoproto.nullable) = false];
  repeated TerminatePlanRequest terminate_plan_requests = 4 [(gogoproto.nullable) = false];
}

message CreatePlanRequest {
  string                    description          = 1;
  string                    farming_pool_address = 2;
  repeated RewardAllocation reward_allocations   = 3 [(gogoproto.nullable) = false];
  google.protobuf.Timestamp start_time           = 4 [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];
  google.protobuf.Timestamp end_time             = 5 [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];
}

message TerminatePlanRequest {
  uint64 plan_id = 1;
}